Adicionei uma pequena atualização.

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
   <title>Coffee&Tech</title>
 </head>
 <body>
-  
+  <h1>Coffee&Tech</h1>
+  <h2>Aqui você encontra tudo sobre tecnologia, em um ambiente cafeínado e descontraído!</h2>
 </body>
 </html>
